# eightyeighty

./: .gitignore  .history  Cargo.toml  README.md
.github/workflows/: check-format.yml  ci.yml  coverage.yml  test.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs
eightyeighty/: package.json  vite.config.ts
emulator/: Cargo.toml  README.md
emulator/resources/: conf.toml
emulator/src/: bus.rs  constants.rs  cpu.rs  lib.rs  main.rs  memory.rs  video.rs
emulator/src/cpu/: instructions.rs  tests.rs
emulator/src/cpu/instructions/: artithmetic.rs  jump_call.rs  load_store_move.rs  misc.rs
emulator/src/devices/: input_latch.rs  mod.rs  port_mapper.rs
emulator/src/devices/hardware/: midway.rs  mod.rs
emulator/src/devices/io/: input_latch.rs  mod.rs  shift_register.rs
frontend/: Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.rs  main.ts  tmp
frontend/src/components/: Display.vue  Memory.vue  Registers.vue
frontend/src/plugins/: index.ts  vuetify.ts
frontend/ui/: controls.slint  globals.slint  main.slint  settings.slint  theme.slint
frontend/ui/components/: controlbutton.slint  emulatordisplay.slint
frontend/ui/emu/: controls.slint  details.slint  hardware.slint  memory.slint  registers.slint  state.slint
resources/: conf.toml
resources/roms/: 8080.asm  8080.hex  coin.hex  display.asm  inputs.asm  test.hex  test.rom
resources/shit/: central.rs  central.txt  test_cpu.rs  test_cpu.txt
resources/shit/opcodes/: arithmetic.txt  instructions.rs  jump_call.txt  load_store_move.rs  load_store_move.txt  mod.txt
resources/sources/: 8080.asm  cpu_test.asm  display.asm  inputs.asm  interrupts.asm
src/: constants.rs  cpu.rs  disassembler.rs  lib.rs  main.rs  memory.rs  utils.rs  video.rs
src/cpu/: central.rs  common.rs  instructions.rs  mod.rs  tests.rs
src/cpu/instructions/: artithmetic.rs  jump_call.rs  load_store_move.rs  misc.rs
src/cpu/opcodes/: arithematic.rs  general.rs  jump_call.rs  load_store_move.rs  mod.rs
tests/: test_cpu.rs
wasm/: Cargo.toml  README.md
wasm/src/: cpu.rs
