[package]
name = "eightyeighty"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "8080"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
rand = "0.7.0"
structopt = "0.3.21"
glam = { version = "0.12", features = ["mint"]}
clap = "2.33.3"

[dependencies.sdl2]
version = "0.35.0" 
default-features = false
features = ["ttf"]
