[package]
name = "eightyeighty"
homepage = "https://github.com/sullivant/eightyeighty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "8080"
path = "src/main.rs"

[dependencies]
rand = "0.7.0"
structopt = "0.3.21"
# glam = { version = "0.12", features = ["mint"]}
clap = "2.33.3"
gl = "0.14"
egui = "0.16"
egui_sdl2_gl = "0.16.0"
tabled = "0.10.0"

[dependencies.sdl2]
version = "0.35.0" 
default-features = false
features = ["ttf"]
