[package]
name = "eightyeighty"
homepage = "https://github.com/sullivant/eightyeighty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emulator"
path = "src/main.rs"

[lib]
name = "emulator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rand = "0.8.5"
structopt = "0.3.21"
gl = "0.14"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde-big-array = "0.5.1"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]  

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"


