[package]
name = "eightyeighty"
homepage = "https://github.com/sullivant/eightyeighty"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "emulator"
path = "src/main.rs"

[lib]
name = "emulator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde-wasm-bindgen = "0.6.5"
serde-big-array = "0.5.1"


[profile.release]
opt-level = "s"


