[package]
name = "emulator"
homepage = "https://github.com/sullivant/eightyeighty"
version = "0.2.0"
edition = "2024"

[lib]
name = "emulator"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde-big-array = "0.5.1"
console = "0.16.2"

[profile.release]
opt-level = "s"
